EasySQLParser.py
# Generated from EasySQL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EasySQLParser ( Parser ):

    grammarFileName = "EasySQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MOSTRAR'", "'DE'", "'POR'", "'ONDE'", 
                     "'INSERIR EM'", "'('", "')'", "'VALORES'", "'REMOVER DE'", 
                     "'DELETAR TABELA'", "'CRIAR TABELA'", "'ATUALIZAR'", 
                     "'DEFINIR'", "','", "'='", "'E'", "'<'", "'>'", "'<='", 
                     "'>='", "'!='", "'NULL'", "'INT'", "'SMALLINT'", "'BIGINT'", 
                     "'FLOAT'", "'REAL'", "'DOUBLE'", "'DECIMAL'", "'NUMERIC'", 
                     "'CHAR'", "'VARCHAR'", "'TEXT'", "'NCHAR'", "'NVARCHAR'", 
                     "'BOOLEAN'", "'DATE'", "'TIME'", "'DATETIME'", "'TIMESTAMP'", 
                     "'YEAR'", "'BLOB'", "'VARBINARY'", "'JSON'", "'XML'", 
                     "'GEOMETRY'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRING", "NUMERO", 
                      "BOOLEANO", "AGREGADOR", "IDENTIFICADOR", "SEMICOLON", 
                      "WS" ]

    RULE_prog = 0
    RULE_query = 1
    RULE_campos = 2
    RULE_campo = 3
    RULE_tuplas = 4
    RULE_definicoes = 5
    RULE_atualizacoes = 6
    RULE_definicao = 7
    RULE_grupos = 8
    RULE_condicoes = 9
    RULE_condicao = 10
    RULE_colunas = 11
    RULE_valores = 12
    RULE_operador = 13
    RULE_valor = 14
    RULE_tipo_dado = 15

    ruleNames =  [ "prog", "query", "campos", "campo", "tuplas", "definicoes", 
                   "atualizacoes", "definicao", "grupos", "condicoes", "condicao", 
                   "colunas", "valores", "operador", "valor", "tipo_dado" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    STRING=47
    NUMERO=48
    BOOLEANO=49
    AGREGADOR=50
    IDENTIFICADOR=51
    SEMICOLON=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(EasySQLParser.QueryContext,0)


        def EOF(self):
            return self.getToken(EasySQLParser.EOF, 0)

        def getRuleIndex(self):
            return EasySQLParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = EasySQLParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.query()
            self.state = 33
            self.match(EasySQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def campos(self):
            return self.getTypedRuleContext(EasySQLParser.CamposContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(EasySQLParser.IDENTIFICADOR, 0)

        def SEMICOLON(self):
            return self.getToken(EasySQLParser.SEMICOLON, 0)

        def grupos(self):
            return self.getTypedRuleContext(EasySQLParser.GruposContext,0)


        def condicoes(self):
            return self.getTypedRuleContext(EasySQLParser.CondicoesContext,0)


        def tuplas(self):
            return self.getTypedRuleContext(EasySQLParser.TuplasContext,0)


        def colunas(self):
            return self.getTypedRuleContext(EasySQLParser.ColunasContext,0)


        def definicoes(self):
            return self.getTypedRuleContext(EasySQLParser.DefinicoesContext,0)


        def atualizacoes(self):
            return self.getTypedRuleContext(EasySQLParser.AtualizacoesContext,0)


        def getRuleIndex(self):
            return EasySQLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = EasySQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(EasySQLParser.T__0)
                self.state = 36
                self.campos()
                self.state = 37
                self.match(EasySQLParser.T__1)
                self.state = 38
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 39
                    self.match(EasySQLParser.T__2)
                    self.state = 40
                    self.grupos()


                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 43
                    self.match(EasySQLParser.T__3)
                    self.state = 44
                    self.condicoes()


                self.state = 47
                self.match(EasySQLParser.SEMICOLON)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(EasySQLParser.T__4)
                self.state = 50
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 51
                    self.match(EasySQLParser.T__5)
                    self.state = 52
                    self.colunas()
                    self.state = 53
                    self.match(EasySQLParser.T__6)


                self.state = 57
                self.match(EasySQLParser.T__7)
                self.state = 58
                self.tuplas()
                self.state = 59
                self.match(EasySQLParser.SEMICOLON)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(EasySQLParser.T__8)
                self.state = 62
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 63
                    self.match(EasySQLParser.T__3)
                    self.state = 64
                    self.condicoes()


                self.state = 67
                self.match(EasySQLParser.SEMICOLON)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.match(EasySQLParser.T__9)
                self.state = 69
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 70
                self.match(EasySQLParser.SEMICOLON)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.match(EasySQLParser.T__10)
                self.state = 72
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 73
                self.match(EasySQLParser.T__5)
                self.state = 74
                self.definicoes()
                self.state = 75
                self.match(EasySQLParser.T__6)
                self.state = 76
                self.match(EasySQLParser.SEMICOLON)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 6)
                self.state = 78
                self.match(EasySQLParser.T__11)
                self.state = 79
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 80
                self.match(EasySQLParser.T__12)
                self.state = 81
                self.atualizacoes()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 82
                    self.match(EasySQLParser.T__3)
                    self.state = 83
                    self.condicoes()


                self.state = 86
                self.match(EasySQLParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CamposContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def campo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasySQLParser.CampoContext)
            else:
                return self.getTypedRuleContext(EasySQLParser.CampoContext,i)


        def getRuleIndex(self):
            return EasySQLParser.RULE_campos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCampos" ):
                listener.enterCampos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCampos" ):
                listener.exitCampos(self)




    def campos(self):

        localctx = EasySQLParser.CamposContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_campos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.campo()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 91
                self.match(EasySQLParser.T__13)
                self.state = 92
                self.campo()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CampoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AGREGADOR(self):
            return self.getToken(EasySQLParser.AGREGADOR, 0)

        def IDENTIFICADOR(self):
            return self.getToken(EasySQLParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return EasySQLParser.RULE_campo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCampo" ):
                listener.enterCampo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCampo" ):
                listener.exitCampo(self)




    def campo(self):

        localctx = EasySQLParser.CampoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_campo)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [50]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(EasySQLParser.AGREGADOR)
                self.state = 99
                self.match(EasySQLParser.T__5)
                self.state = 100
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 101
                self.match(EasySQLParser.T__6)
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(EasySQLParser.IDENTIFICADOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TuplasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valores(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasySQLParser.ValoresContext)
            else:
                return self.getTypedRuleContext(EasySQLParser.ValoresContext,i)


        def getRuleIndex(self):
            return EasySQLParser.RULE_tuplas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuplas" ):
                listener.enterTuplas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuplas" ):
                listener.exitTuplas(self)




    def tuplas(self):

        localctx = EasySQLParser.TuplasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tuplas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(EasySQLParser.T__5)
            self.state = 106
            self.valores()
            self.state = 107
            self.match(EasySQLParser.T__6)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 108
                self.match(EasySQLParser.T__13)
                self.state = 109
                self.match(EasySQLParser.T__5)
                self.state = 110
                self.valores()
                self.state = 111
                self.match(EasySQLParser.T__6)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasySQLParser.DefinicaoContext)
            else:
                return self.getTypedRuleContext(EasySQLParser.DefinicaoContext,i)


        def getRuleIndex(self):
            return EasySQLParser.RULE_definicoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicoes" ):
                listener.enterDefinicoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicoes" ):
                listener.exitDefinicoes(self)




    def definicoes(self):

        localctx = EasySQLParser.DefinicoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definicoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.definicao()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 119
                self.match(EasySQLParser.T__13)
                self.state = 120
                self.definicao()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtualizacoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(EasySQLParser.IDENTIFICADOR)
            else:
                return self.getToken(EasySQLParser.IDENTIFICADOR, i)

        def valor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasySQLParser.ValorContext)
            else:
                return self.getTypedRuleContext(EasySQLParser.ValorContext,i)


        def getRuleIndex(self):
            return EasySQLParser.RULE_atualizacoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtualizacoes" ):
                listener.enterAtualizacoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtualizacoes" ):
                listener.exitAtualizacoes(self)




    def atualizacoes(self):

        localctx = EasySQLParser.AtualizacoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atualizacoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(EasySQLParser.IDENTIFICADOR)
            self.state = 127
            self.match(EasySQLParser.T__14)
            self.state = 128
            self.valor()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 129
                self.match(EasySQLParser.T__13)
                self.state = 130
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 131
                self.match(EasySQLParser.T__14)
                self.state = 132
                self.valor()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(EasySQLParser.IDENTIFICADOR, 0)

        def tipo_dado(self):
            return self.getTypedRuleContext(EasySQLParser.Tipo_dadoContext,0)


        def getRuleIndex(self):
            return EasySQLParser.RULE_definicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicao" ):
                listener.enterDefinicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicao" ):
                listener.exitDefinicao(self)




    def definicao(self):

        localctx = EasySQLParser.DefinicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_definicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(EasySQLParser.IDENTIFICADOR)
            self.state = 139
            self.tipo_dado()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GruposContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(EasySQLParser.IDENTIFICADOR)
            else:
                return self.getToken(EasySQLParser.IDENTIFICADOR, i)

        def getRuleIndex(self):
            return EasySQLParser.RULE_grupos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrupos" ):
                listener.enterGrupos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrupos" ):
                listener.exitGrupos(self)




    def grupos(self):

        localctx = EasySQLParser.GruposContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_grupos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(EasySQLParser.IDENTIFICADOR)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 142
                self.match(EasySQLParser.T__13)
                self.state = 143
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasySQLParser.CondicaoContext)
            else:
                return self.getTypedRuleContext(EasySQLParser.CondicaoContext,i)


        def getRuleIndex(self):
            return EasySQLParser.RULE_condicoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicoes" ):
                listener.enterCondicoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicoes" ):
                listener.exitCondicoes(self)




    def condicoes(self):

        localctx = EasySQLParser.CondicoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.condicao()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 150
                self.match(EasySQLParser.T__15)
                self.state = 151
                self.condicao()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(EasySQLParser.IDENTIFICADOR, 0)

        def operador(self):
            return self.getTypedRuleContext(EasySQLParser.OperadorContext,0)


        def valor(self):
            return self.getTypedRuleContext(EasySQLParser.ValorContext,0)


        def AGREGADOR(self):
            return self.getToken(EasySQLParser.AGREGADOR, 0)

        def getRuleIndex(self):
            return EasySQLParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)




    def condicao(self):

        localctx = EasySQLParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicao)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 158
                self.operador()
                self.state = 159
                self.valor()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(EasySQLParser.AGREGADOR)
                self.state = 162
                self.match(EasySQLParser.T__5)
                self.state = 163
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 164
                self.match(EasySQLParser.T__6)
                self.state = 165
                self.operador()
                self.state = 166
                self.valor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColunasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(EasySQLParser.IDENTIFICADOR)
            else:
                return self.getToken(EasySQLParser.IDENTIFICADOR, i)

        def getRuleIndex(self):
            return EasySQLParser.RULE_colunas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColunas" ):
                listener.enterColunas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColunas" ):
                listener.exitColunas(self)




    def colunas(self):

        localctx = EasySQLParser.ColunasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_colunas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(EasySQLParser.IDENTIFICADOR)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 171
                self.match(EasySQLParser.T__13)
                self.state = 172
                self.match(EasySQLParser.IDENTIFICADOR)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasySQLParser.ValorContext)
            else:
                return self.getTypedRuleContext(EasySQLParser.ValorContext,i)


        def getRuleIndex(self):
            return EasySQLParser.RULE_valores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValores" ):
                listener.enterValores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValores" ):
                listener.exitValores(self)




    def valores(self):

        localctx = EasySQLParser.ValoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_valores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.valor()
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 179
                self.match(EasySQLParser.T__13)
                self.state = 180
                self.valor()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EasySQLParser.RULE_operador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperador" ):
                listener.enterOperador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperador" ):
                listener.exitOperador(self)




    def operador(self):

        localctx = EasySQLParser.OperadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_operador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4096000) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(EasySQLParser.STRING, 0)

        def NUMERO(self):
            return self.getToken(EasySQLParser.NUMERO, 0)

        def BOOLEANO(self):
            return self.getToken(EasySQLParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return EasySQLParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)




    def valor(self):
